--- a/package.json
+++ b/package.json
@@ -50,9 +50,9 @@
     "input-otp": "^1.2.4",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
-    "react": "^18.2.0",
+    "react": "18.2.0",
     "react-day-picker": "^8.10.1",
-    "react-dom": "^18.2.0",
+    "react-dom": "18.2.0",
     "react-hook-form": "^7.53.0",
     "react-resizable-panels": "^2.1.3",
     "react-router-dom": "^6.26.2",
@@ -70,8 +70,8 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@types/node": "^22.5.5",
-    "@types/react": "^18.3.23",
-    "@types/react-dom": "^18.3.7",
+    "@types/react": "^18.2.66",
+    "@types/react-dom": "^18.2.21",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.9.0",
@@ -88,8 +88,18 @@
     "vite": "^5.4.1",
     "vitest": "^3.2.4"
   },
+  "overrides": {
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "scheduler": "0.23.0"
+  },
   "resolutions": {
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "scheduler": "0.23.0"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
+
