--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
 DJANGO_SECRET_KEY=django-insecure-change-me
 DJANGO_DEBUG=True
 VITE_BACKEND_URL=http://localhost:8000
+# Datos de proveedor para órdenes de compra
+SUPPLIER_API_URL=http://api.supplier.com/orders
+SUPPLIER_API_TOKEN=token
+SUPPLIER_EMAIL=supplier@example.com
