--- a/tests/.env.test
+++ b/tests/.env.test
@@ -1,2 +1,5 @@
 DJANGO_SECRET_KEY=django-insecure-test
 DJANGO_DEBUG=True
+SUPPLIER_API_URL=http://api.test/orders
+SUPPLIER_API_TOKEN=test-token
+SUPPLIER_EMAIL=supplier@test.com
