--- a/package.json
+++ b/package.json
@@ -12,8 +12,6 @@
     "test": "vitest run"
   },
   "dependencies": {
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
@@ -52,7 +50,10 @@
     "input-otp": "^1.2.4",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
+    "react": "18.2.0",
     "react-day-picker": "^8.10.1",
+    "react-dom": "18.2.0",
+    "react-error-boundary": "^4.1.2",
     "react-hook-form": "^7.53.0",
     "react-resizable-panels": "^2.1.3",
     "react-router-dom": "^6.26.2",
@@ -64,8 +65,6 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "vite": "^5.4.1",
-    "@vitejs/plugin-react": "^4.2.1",
     "@tailwindcss/typography": "^0.5.15",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
@@ -73,6 +72,7 @@
     "@types/node": "^22.5.5",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.21",
+    "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.9.0",
     "eslint-plugin-react-hooks": "^5.1.0",
@@ -85,10 +85,10 @@
     "tailwindcss": "^3.4.11",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
+    "vite": "^5.4.1",
     "vitest": "^3.2.4"
   },
   "engines": {
     "node": ">=18.0.0"
   }
 }
-
