--- a/package.json
+++ b/package.json
@@ -50,9 +50,9 @@
     "input-otp": "^1.2.4",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-day-picker": "^8.10.1",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-error-boundary": "^4.1.2",
     "react-hook-form": "^7.53.0",
     "react-resizable-panels": "^2.1.3",
@@ -86,7 +86,7 @@
     "tailwindcss": "^3.4.11",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
-    "vite": "^5.4.1",
+    "vite": "^7.3.0",
     "vitest": "^3.2.4"
   },
   "engines": {
