--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,8 @@
 DJANGO_SECRET_KEY=django-insecure-change-me
 DJANGO_DEBUG=True
 VITE_BACKEND_URL=http://localhost:8000
+# Comma-separated list of extra origins allowed for CORS/CSRF (include scheme)
+DJANGO_EXTRA_ORIGINS=
 # Datos de proveedor para órdenes de compra
 SUPPLIER_API_URL=http://api.supplier.com/orders
 SUPPLIER_API_TOKEN=token
